--- a/pages/projects.html
+++ b/pages/projects.html
@@ -155,7 +155,8 @@
 <li>Wuxia Knowledge Graph Construction: A Case Study on the Jinyong Kungfu Novels, Student Research Training Program (SRTP) in Chongqing University, 2021.06-2022.06 (supervisor)</li>
 
 
-<li>Food Knowledge Graph Construction towards Sichuan Cuisine, Fundamental Research Funds for the Center of Research and Development for Sichuan Cuisine (No. CC21G02), 2021.07-2023.07 (principal)</li>
+<!-- principal -->
+<li>Food Knowledge Graph Construction towards Sichuan Cuisine, Fundamental Research Funds for the Center of Research and Development for Sichuan Cuisine (No. CC21G02), 2021.07-2023.07 (Primary Investigator)</li>
 
 
 <li>Research and Application of Knowledge Computational Theory of Big Data in Social Network, Fundamental Research Funds for the Central Universities of China (No. A03017023701), 2017.01-2019.12 (main participant)</li>
