--- a/pages/projects.html
+++ b/pages/projects.html
@@ -152,14 +152,14 @@
 <ul>
 <!-- <li>UNSW-Inkerz Collabration: Patented Pen Smart Application (IPSA) (Industrial Project) <a href="https://inkerz.com/"><strong><u>Inkerz Pty. Ltd.</strong></u></a>, Australia 2019 (main participant)</li> -->
 
-<li>Wuxia Knowledge Graph Construction: A Case Study on the Jinyong Kungfu Novels, Student Research Training Program (SRTP) in Chongqing University, 2021.06-2022.06 (supervisor)</li>
+<li>Wuxia Knowledge Graph Construction: A Case Study on the Jinyong Kungfu Novels, Student Research Training Program (SRTP) in Chongqing University, 2021.06-2022.06 (Supervisor)</li>
 
 
 <!-- principal -->
 <li>Food Knowledge Graph Construction towards Sichuan Cuisine, Fundamental Research Funds for the Center of Research and Development for Sichuan Cuisine (No. CC21G02), 2021.07-2023.07 (Primary Investigator)</li>
 
 
-<li>Research and Application of Knowledge Computational Theory of Big Data in Social Network, Fundamental Research Funds for the Central Universities of China (No. A03017023701), 2017.01-2019.12 (main participant)</li>
+<li>Research and Application of Knowledge Computational Theory of Big Data in Social Network, Fundamental Research Funds for the Central Universities of China (No. A03017023701), 2017.01-2019.12 (Main participant)</li>
 </ul>
 </div>
 </div>
