--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -365,6 +365,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/xMS9P8ysLUh779RGpwlUkA" target="_blank">2021年深度学习哪些方向比较新颖，处于上升期或者朝阳阶段，比较有研究潜力？</a>
     |
+    <a href="https://mp.weixin.qq.com/s/zH5UuHltN4pk2XvJ3laW0Q" target="_blank">【论文导读】2021年论文导读第二十一期，7篇「视觉语言表示、图嵌入」TIP等论文</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
@@ -1248,7 +1250,12 @@ SE field：
     <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
     | 
     <a href="https://liliweise.github.io/index.html" target="_blank">Lili Wei</a>
-    |       
+    |
+<!-- Austrilia -->
+    <a href="https://yuleisui.github.io/" target="_blank">Yulei Sui</a>
+    |
+    <a href="https://researchers.anu.edu.au/researchers/xing-z" target="_blank">Zhenchang Xing</a>
+    |         
   <br />
   <br />
 </body></html>
