--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1249,6 +1249,8 @@ SE field：
     |
     <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
     | 
+    <a href="https://sites.google.com/site/junjiechen08/" target="_blank">Junjie Chen</a>
+    |
     <a href="https://liliweise.github.io/index.html" target="_blank">Lili Wei</a>
     |
 <!-- Austrilia -->
