--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -166,6 +166,8 @@
     | 
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
+    <a href="https://2022.eswc-conferences.org/call-for-papers-research-track/" target="_blank">ESWC</a>
+    |
     <a href="https://www.icwsm.org/2022/index.html/#fullpapers" target="_blank">ICWSM</a>
     |
     <a href="https://sigspatial2021.sigspatial.org/cfp2022/" target="_blank">ACM SIGSPATIAL</a>
