--- a/pages/publications.html
+++ b/pages/publications.html
@@ -89,7 +89,7 @@
  -->
 
     
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (To be Submitted)</li>
+    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
 
 
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pid/23/8492.html" target="_blank">Jiasheng Zhang</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="#"><strong><font color= "#00066f">An Overview of Embedding Models of Entities and Relationships for Temporal Knowledge Graph Completion</font></strong></a>. (Under Review)</li>
@@ -112,7 +112,7 @@
 
 
 
-    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods Based on Machine Learning</font></strong></a>. (To be Submitted)</li>
+    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods Based on Machine Learning</font></strong></a>. (Under Review)</li>
 
 <!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, Jiasheng Zhang<sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> TKBData: A Large-Scale Temporal Knowledge Base Dataset with Evaluation on State-of-the-Art Tasks</font></strong></a>.
 The 28th International Conference on Computational Linguistics (<a href="https://coling2020.org/"><strong><u><font color="#874e26">COLING-20</font></u></strong></a>). Barcelona, Spain, December 8-11 2019 (CCF: B) (To be Submitted)</li>  -->
