--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -160,6 +160,16 @@
     | 
     <a href="https://2022.esec-fse.org/track/fse-2022-research-papers" target="_blank">FSE ESEC</a>
     |
+    <a href="https://cyprusconferences.org/icsme2022/index.php/call-for-research-track/" target="_blank">ICSME</a>
+    |
+    <a href="https://saner2022.uom.gr/index" target="_blank">SANER</a>
+    |
+    <a href="https://conf.researchr.org/home/esem-2022" target="_blank">ESEM</a>
+    |
+    <a href="#" target="_blank">ISSRE</a>
+    | 
+    <a href="https://conf.researchr.org/track/icpc-2022/icpc-2022-research" target="_blank">ICPC</a>
+    |
     <a href="https://wcci2022.org/" target="_blank">IJCNN</a>
     |
     <a href="http://pakdd.net/" target="_blank">PAKDD</a>
@@ -706,6 +716,8 @@
     <a href="https://mp.weixin.qq.com/s/cnOa649-VihZdt45V-gBoQ" target="_blank">PyTorch多卡分布式训练：DistributedDataParallel (DDP) 简要分析</a>
     |
     <a href="https://mp.weixin.qq.com/s/qDDKs2ZxcJVwKrjrbyIpVA" target="_blank">综述：PyTorch显存机制分析</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/GZ_QBPF9iZt_QbziS95WWQ" target="_blank">实践教程｜PyTorch训练加速技巧</a>
     |
 <!--   <br /> -->
 
