--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -686,6 +686,25 @@
 <br />
 
 
+<!-- NLP model -->
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">NLP模型</h3>
+
+<br />
+
+    <a href="https://mp.weixin.qq.com/s/ykwtgHhCGRq5Ybh8I4ZFsA" target="_blank">NLP预训练中的mask方式总结</a>
+    |
+<!--   <br /> -->
+
+<br />
+<br />
+
+
 <!-- Deep model -->
 <hr align="left" width="100%">
 
