--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -716,6 +716,8 @@
 
 <br />
 
+    <a href="https://mp.weixin.qq.com/s/76Vf8wVVz7W4AONIgr1vqQ" target="_blank">RTX 3090的深度学习环境配置指南：Pytorch、TensorFlow、Keras</a>
+    |
     <a href="https://mp.weixin.qq.com/s/YZD3rzTxa8Vqpi6MOGeRLQ" target="_blank">深度学习模型参数量/计算量和推理速度计算</a>
     |
     <a href="https://mp.weixin.qq.com/s/6OkobO8Y7TELa1QAki18RA" target="_blank">FAIR研究员：重新思考BatchNorm中的"Batch"</a>
