--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -187,6 +187,16 @@
     |
     <a href="https://lrec2022.lrec-conf.org/en/" target="_blank">LREC</a>
     |
+    <a href="#" target="_blank">APWeb-WAIM</a>
+    |
+    <a href="#" target="_blank">IEEE BigData (<a href="#" target="_blank">Download</a>)</a>
+    |
+    <a href="https://wise2022.sigappfr.org/" target="_blank">WISE</a>
+    |
+    <a href="#" target="_blank">INLG</a>
+    |
+    <a href="#" target="_blank">CCL</a>
+    |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
     |
