--- a/pages/publications.html
+++ b/pages/publications.html
@@ -92,7 +92,8 @@
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
 
 
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pid/23/8492.html" target="_blank">Jiasheng Zhang</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="#"><strong><font color= "#00066f">An Overview of Embedding Models of Entities and Relationships for Temporal Knowledge Graph Completion</font></strong></a>. (Under Review)</li>
+<!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="#"><strong><font color= "#00066f">An Overview of Embedding Models of Entities and Relationships for Temporal Knowledge Graph Completion</font></strong></a>. (Under Review)</li> -->
+
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li>  -->
 
 
@@ -128,7 +129,7 @@ The 4th Asia Pacific Web and Web-Age Information Management Joint Conference on 
 <!-- 2020 International Conference on Progress in Informatics and Computing (<a href="http://www.picconf.com/"><strong><u><font color="#874e26">PIC-20</font></u></strong></a>). Shanghai, China, December 18-20 2020 (Under Review)</li>  -->
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a><sup>#</sup>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>,  <a href="#"><strong><font color= "#00066f">A Hybrid Neural Network Model for Hypernym-hyponym Relation Identification</font></strong></a>. 
-Information Sciences (<a href="https://www.journals.elsevier.com/information-sciences"><strong><u><font color="#874e26">IS</font></u></strong></a>). (IF = 5.910, CCF-B, JCR Q1, 中科院 Q1) (Under Review)</li>
+Information Sciences (<a href="https://www.journals.elsevier.com/information-sciences"><strong><u><font color="#874e26">IS</font></u></strong></a>). (IF = 5.910, CCF-B, JCR Q1, 中科院 Q1) (In Press)</li>
 
 
     <li><a href="https://dblp.uni-trier.de/pid/240/6876.html" target="_blank">Guanglin Niu</a>, <a href="http://scse.buaa.edu.cn/info/1078/5211.htm" target="_blank">Bo Li</a>, <a href="http://teacher.buaa.edu.cn/yfzhang/" target="_blank">Yongfei Zhang</a>*, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.shichuan.org/ShiChuan_ch.html" target="_blank">Chuan Shi</a>, Jingyang Li, and Shiliang Pu, <a href="https://arxiv.org/pdf/2010.02602.pdf"><strong><font color= "#00066f">Joint Semantics and Data-Driven Path Representation for Knowledge Graph Inference</font></strong></a>. 
