--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -146,13 +146,17 @@
 <h4>2022</h4>
     <a href="https://infocom2022.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
-    <a href="http://iswc2022.openkg.cn/" target="_blank">ISWC</a>
-    |
-    <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
-    |
     <a href="https://sigir.org/sigir2022/" target="_blank">SIGIR</a>
     |
-    <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
+    <a href="http://iswc2022.openkg.cn/" target="_blank">ISWC</a>
+    |
+    <a href="#" target="_blank">KR</a>
+    |  
+    <a href="#" target="_blank">ECML-PKDD</a>
+    |
+    <a href="#" target="_blank">CIKM</a>
+    |
+    <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
     <a href="https://www.wsdm-conference.org/2022/" target="_blank">WSDM</a>
     |
@@ -172,6 +176,8 @@
     <a href="https://conf.researchr.org/track/icpc-2022/icpc-2022-research" target="_blank">ICPC</a>
     |
     <a href="https://internetware2022.github.io/" target="_blank">Internetware</a>
+    |
+    <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
     |
     <a href="https://wcci2022.org/" target="_blank">IJCNN</a>
     |
