--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -205,6 +205,8 @@
     |
     <a href="#" target="_blank">CCL</a>
     |
+    <a href="https://www.chilconference.org/index.html" target="_blank">CHIL</a>
+    |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
     |
