--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -152,6 +152,8 @@
     |
     <a href="http://iswc2022.openkg.cn/" target="_blank">ISWC</a>
     |
+    <a href="https://coling2022.org/Cpapers" target="_blank">COLING</a>
+    |
     <a href="#" target="_blank">KR</a>
     |  
     <a href="#" target="_blank">ECML-PKDD</a>
