--- a/pages/publications.html
+++ b/pages/publications.html
@@ -80,7 +80,7 @@
 <!-- 2021 year -->
 <h4>2021</h4>
 <ol start="1">
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)</li>
+    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Shulin Tang, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)</li>
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li> 
  -->
 
