--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -690,6 +690,25 @@
 <br />
 
 
+<!-- Pytorch -->
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Pytorch</h3>
+
+<br />
+
+    <a href="https://mp.weixin.qq.com/s/hAlU2WMUzs6ehiQgiyZgNA" target="_blank">实操教程｜PyTorch自定义CUDA算子教程与运行时间分析</a>
+    |
+<!--   <br /> -->
+
+<br />
+<br />
+
+
 <!-- Deep设备选型 -->
 <hr align="left" width="100%">
 
@@ -789,6 +808,8 @@
 
 <br />
 
+    <a href="https://mp.weixin.qq.com/s/0F-_KIsA6uEwFTf2wJCK9A" target="_blank">Pycharm常用快捷键大全</a>
+    |
     <a href="https://mp.weixin.qq.com/s/aACazMGEIkUHRnLADltGwg" target="_blank">10秒！GitHub工程团队转移到Codespaces，开发环境「即开即用」</a>
     |
     <a href="https://mp.weixin.qq.com/s/ho2tH80vHxdm6XBW92hpAA" target="_blank">Pycharm那些隐藏的实用小技巧，yyds！</a>
