--- a/pages/news.html
+++ b/pages/news.html
@@ -70,7 +70,7 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
-      [2021/12/04]&nbsp;&nbsp; I am invited to be a distinguished guest of the PhD Debate-8 activity organized by AI TIME sharing the topic on Advance Semantic Comprehension in Commonsense Knowledge, and the propaganda poster is available at <a href="https://mp.weixin.qq.com/s/HJw74vFJVIraXDZd2pmSAg" target="_blank">here</a>.
+      [2021/12/04]&nbsp;&nbsp; I am invited to be a distinguished guest of the PhD Debate-8 activity organized by AI TIME (aitime.cn) sharing the topic on Advance Semantic Comprehension in Commonsense Knowledge, and the propaganda poster is available at <a href="https://mp.weixin.qq.com/s/HJw74vFJVIraXDZd2pmSAg" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
       [2021/09/27]&nbsp;&nbsp; I have awarded as a senior member of China Computer Federation, and the corresponding certificate is <a href="../certificate/CCF高级会员证书.pdf" target="_blank">here</a>.
