--- a/pages/publications.html
+++ b/pages/publications.html
@@ -109,7 +109,7 @@
 
 
 
-    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, <a href="http://www.cse.cqu.edu.cn/info/2096/3500.htm" target="_blank">Sen Wang</a>, and Junpeng Cai, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Data Centers with Switching Capability Constraint</font></strong></a>. (Under Review)</li> 
+    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, <a href="http://www.cse.cqu.edu.cn/info/2096/3500.htm" target="_blank">Sen Wang</a>, and Junpeng Cai, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Hierarchical Data Centers by Reinforcement Learning</font></strong></a>. (Under Review)</li> 
 
 
 
