--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -146,6 +146,8 @@
 <h4>2022</h4>
     <a href="https://infocom2022.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
+    <a href="https://icdcs2022.icdcs.org/call-for-demo-and-posters/" target="_blank">ICDCS</a>
+    |
     <a href="https://sigir.org/sigir2022/" target="_blank">SIGIR</a>
     |
     <a href="https://ijcai-22.org/" target="_blank">IJCAI</a>
@@ -292,6 +294,10 @@
     |
     <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
     |
+    <a href="https://www.ecir2021.eu/proceedings/" target="_blank">ECIR</a>
+    |
+    <a href="https://link.springer.com/book/10.1007/978-3-030-88480-2" target="_blank">NLPCC</a>
+    |
     <a href="https://2021.eacl.org/program/accepted/" target="_blank">EACL</a>
     |
     <a href="https://aclanthology.org/events/naacl-2021/" target="_blank">NAACL (<a href="https://2021.naacl.org/program/" target="_blank">Conference Program</a>) </a>
@@ -299,8 +305,6 @@
     <a href="https://link.springer.com/book/10.1007/978-3-030-82153-1?page=1#toc" target="_blank">KSEM</a>
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
-    |
-    <a href="https://link.springer.com/book/10.1007/978-3-030-88480-2" target="_blank">NLPCC</a>
     |
     <a href="https://iconip2021.apnns.org/" target="_blank">ICONIP</a>
     |
