--- a/pages/news.html
+++ b/pages/news.html
@@ -70,10 +70,10 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
-      [2021/12/04]&nbsp;&nbsp; I am invited to be a distinguished guest of the PhD Debate-8 activity organized by AI TIME (aitime.cn) sharing the topic on Advance Semantic Comprehension in Commonsense Knowledge, and the propaganda poster is available at <a href="https://mp.weixin.qq.com/s/HJw74vFJVIraXDZd2pmSAg" target="_blank">here</a>.
+      [2021/12/04]&nbsp;&nbsp; I am invited to be a distinguished guest of the PhD Debate-8 activity that organized by AI TIME (aitime.cn) making a debate on the topic of Advance Semantic Comprehension in Commonsense Knowledge. Find out more about the details of the debate in the <a href="https://mp.weixin.qq.com/s/HJw74vFJVIraXDZd2pmSAg" target="_blank">notice</a>, <a href="./poster/poster_AITimePhDdebate8.jpg" target="_blank">propaganda poster</a> and <a href="#" target="_blank">video</a>.
     </li>
     <li style="text-align:justify">
-      [2021/09/27]&nbsp;&nbsp; I have been elected as a senior member of China Computer Federation, the corresponding certificate is <a href="../certificate/CCF高级会员证书.pdf" target="_blank">here</a>.
+      [2021/09/27]&nbsp;&nbsp; I am elected as a senior member of China Computer Federation, and the corresponding certificate is <a href="../certificate/CCF高级会员证书.pdf" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
       [2021/08/28-29]&nbsp;&nbsp; I participate in the national senior seminar of AI online, and the certificate of comletion is <a href="../certificate/AI_workshop_20210908.pdf" target="_blank">here</a>.
