--- a/pages/news.html
+++ b/pages/news.html
@@ -70,13 +70,13 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
-      [2021/12/04]&nbsp;&nbsp; I am invited to be a distinguished guest of the PhD Debate-8 activity that organized by AI TIME (aitime.cn) making a debate on the topic of Advance Semantic Comprehension in Commonsense Knowledge. Find out more about the details of the debate in the <a href="https://mp.weixin.qq.com/s/HJw74vFJVIraXDZd2pmSAg" target="_blank">notice</a>, <a href="./poster/poster_AITimePhDdebate8.jpg" target="_blank">propaganda poster</a> and <a href="#" target="_blank">video</a>.
+      [2021/12/04]&nbsp;&nbsp; I am invited to be a distinguished guest of the PhD Debate-8 activity that organized by AI TIME (aitime.cn) making a debate on the topic of Advance Semantic Comprehension in Commonsense Knowledge. Find out more about the details of the debate in the <a href="https://mp.weixin.qq.com/s/HJw74vFJVIraXDZd2pmSAg" target="_blank">notice</a>, <a href="../poster/poster_AITimePhDdebate8.jpg" target="_blank">propaganda poster</a> and <a href="#" target="_blank">video</a>.
     </li>
     <li style="text-align:justify">
       [2021/09/27]&nbsp;&nbsp; I am elected as a senior member of China Computer Federation, and the corresponding certificate is <a href="../certificate/CCF高级会员证书.pdf" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
-      [2021/08/28-29]&nbsp;&nbsp; I participate in the national senior seminar of AI online, and the certificate of comletion is <a href="../certificate/AI_workshop_20210908.pdf" target="_blank">here</a>.
+      [2021/08/28-29]&nbsp;&nbsp; I have participated in the national senior seminar of AI online, and the certificate of comletion is <a href="../certificate/AI_workshop_20210908.pdf" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
       [2021/08/17]&nbsp;&nbsp; I successfully passed Nebula Graph Certifications and being recognized as the <a href="../certificate/NGCI0001004(En).pdf" target="_blank">Nebula Graph Certified Insider (NGCI)</a> and <a href="../certificate/NGCP0001006(En).pdf" target="_blank">Nebula Graph Certified Professional (NGCP)</a>. This activity notice is <a href="https://mp.weixin.qq.com/s/D45N0N8PByZFRa282r2HAA" target="_blank">here</a>.
@@ -100,7 +100,7 @@
       [2021/02]&nbsp;&nbsp; I am invited to become a Program Committee Member of <a href="http://139.159.245.147/" target="_blank">APWeb-WAIM 2021</a>.
     </li>
     <li style="text-align:justify">
-      [2020/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教师培训证书_2020.09.19.pdf" target="_blank">the teaching certificate of information technology in the new engineering</a> provided by China Software Industry Association Training Center
+      [2020/09/19]&nbsp;&nbsp; I successfully obtained <a href="../certificate/新工科教师培训证书_2020.09.19.pdf" target="_blank">the teaching certificate of information technology in the new engineering</a> provided by China Software Industry Association Training Center.
     </li>
     <li style="text-align:justify">
       [2020/07/16]&nbsp;&nbsp; I successfully defended my dissertation entitled "Research and Application of Learning Methods for Knowledge Graphs" and will ready to move on a new start.
