--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1346,6 +1346,15 @@ NLP/KG field：
   <br />
 SE field：
 <br />
+<!-- USA -->
+    <a href="https://haow.ca/" target="_blank">Hao Wang [<a href="https://intellisys.haow.ca/" target="_blank">IntelliSys Lab</a>]</a>
+    |
+    <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
+    |       
+  <br />
+  <br />
+SE field：
+<br />
     <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
     |
     <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
