--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1344,13 +1344,11 @@ NLP/KG field：
     |
   <br />
   <br />
-SE field：
+Distributional system field：
 <br />
 <!-- USA -->
     <a href="https://haow.ca/" target="_blank">Hao Wang [<a href="https://intellisys.haow.ca/" target="_blank">IntelliSys Lab</a>]</a>
-    |
-    <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
-    |       
+    |     
   <br />
   <br />
 SE field：
