--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -189,6 +189,10 @@
     |
     <a href="http://pakdd.net/" target="_blank">PAKDD</a>
     | 
+    <a href="#" target="_blank">ECIR</a>
+    |
+    <a href="#" target="_blank">NLPCC</a>
+    |
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
     <a href="https://2022.eswc-conferences.org/call-for-papers-research-track/" target="_blank">ESWC</a>
