--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -324,7 +324,7 @@
     |
     <a href="https://inlg2021.github.io/pages/papers.html" target="_blank">INLG</a>
     |
-    <a href="http://www.cips-cl.org/static/CCL2021/index.html" target="_blank">CCL</a>
+    <a href="https://hub.baai.ac.cn/view/12742" target="_blank">CCL (<a href="https://mp.weixin.qq.com/s/kBCXcwOzDj7Yk81sujcyhg" target="_blank">Report</a>)</a>
     |
     <a href="https://recsys.acm.org/recsys21/accepted-contributions/" target="_blank">ACM RecSys</a>
     |
@@ -335,6 +335,8 @@
     <a href="https://ccir2021.dlufl.edu.cn/index.html" target="_blank">CCIR</a>
     |
     <a href="http://icbk2021.zhonghuapu.com/call/" target="_blank">ICBK</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/feS5lKuT3FNXOSEOcOZZjQ" target="_blank">CHIP</a>
     |
     <a href="https://www.icwsm.org/2021/index.html" target="_blank">ICWSM</a>
     |
