--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -171,6 +171,8 @@
     | 
     <a href="https://2022.esec-fse.org/track/fse-2022-research-papers" target="_blank">FSE ESEC</a>
     |
+    <a href="https://conf.researchr.org/home/issta-2022" target="_blank">ISSTA</a>
+    |
     <a href="https://cyprusconferences.org/icsme2022/index.php/call-for-research-track/" target="_blank">ICSME</a>
     |
     <a href="https://saner2022.uom.gr/index" target="_blank">SANER</a>
@@ -447,6 +449,8 @@
     <a href="https://conf.researchr.org/track/ase-2020/ase-2020-papers?track=ASE%20Research%20Papers#event-overview" target="_blank">ASE</a>
     |
     <a href="https://2020.esec-fse.org/program/program-esecfse-2020/" target="_blank">FSE ESEC</a>
+    |
+    <a href="https://conf.researchr.org/home/issta-2020" target="_blank">ISSTA</a>
     | 
     ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
     |
