--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -186,6 +186,8 @@
     | 
     <a href="https://conf.researchr.org/track/icpc-2022/icpc-2022-research" target="_blank">ICPC</a>
     |
+    <a href="#" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    |
     <a href="https://internetware2022.github.io/" target="_blank">Internetware</a>
     |
     <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
@@ -301,6 +303,8 @@
     | 
     <a href="https://conf.researchr.org/track/icpc-2021/icpc-2021-research?#program" target="_blank">ICPC</a>
     |
+    <a href="https://ieeebibm.org/BIBM2021/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    |
     <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
     |
     <a href="https://www.ecir2021.eu/proceedings/" target="_blank">ECIR</a>
@@ -329,7 +333,7 @@
     |
     <a href="https://inlg2021.github.io/pages/papers.html" target="_blank">INLG</a>
     |
-    <a href="https://hub.baai.ac.cn/view/12742" target="_blank">CCL (<a href="https://mp.weixin.qq.com/s/kBCXcwOzDj7Yk81sujcyhg" target="_blank">Report</a>)</a>
+    <a href="https://hub.baai.ac.cn/view/12742" target="_blank">CCL (<a href="https://mp.weixin.qq.com/s/kBCXcwOzDj7Yk81sujcyhg" target="_blank">Report</a>, <a href="https://link.springer.com/book/10.1007/978-3-030-84186-7" target="_blank">Download</a>)</a>
     |
     <a href="https://recsys.acm.org/recsys21/accepted-contributions/" target="_blank">ACM RecSys</a>
     |
@@ -484,6 +488,8 @@
     <a href="https://ieeexplore.ieee.org/xpl/conhome/9250925/proceeding" target="_blank">ISSRE</a>
     | 
     <a href="https://conf.researchr.org/program/icpc-2020/program-icpc-2020/" target="_blank">ICPC</a>
+    |
+    <a href="http://ieeebibm.org/BIBM2020/" target="_blank">BIBM (<a href="https://ieeexplore.ieee.org/xpl/conhome/9312958/proceeding" target="_blank">Download</a>)</a>
     |
     <a href="https://link.springer.com/conference/nlpcc" target="_blank">NLPCC</a>
     |
