--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -340,7 +340,7 @@
     |
     <a href="https://recsys.acm.org/recsys21/accepted-contributions/" target="_blank">ACM RecSys</a>
     |
-    <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a> (workshop on <a href="https://akbc-cskb.github.io/#contact" target="_blank">CSKB</a> in AKBC)
+    <a href="https://akbc.apps.allenai.org/index.html" target="_blank">AKBC</a> (<a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">submissions</a>, workshop on <a href="https://akbc-cskb.github.io/#contact" target="_blank">CSKB</a> in AKBC)
     |
     <a href="http://sigkg.cn/ccks2021/" target="_blank">CCKS</a>
     |
