--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -358,6 +358,8 @@
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-87571-8" target="_blank">WISA</a>
     |
+    <a href="https://conf.ccf.org.cn/web/html7/index.html?globalId=m8359255541705646081619341782860&type=1" target="_blank">CBC (<a href="https://mp.weixin.qq.com/s/-yCIZlsSgafmw9QtCdcEPA" target="_blank">Report</a>)</a>
+    |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
 <!-- add more venue paper -->
