--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -360,6 +360,10 @@
     |
     <a href="https://conf.ccf.org.cn/web/html7/index.html?globalId=m8359255541705646081619341782860&type=1" target="_blank">CBC (<a href="https://mp.weixin.qq.com/s/-yCIZlsSgafmw9QtCdcEPA" target="_blank">Report</a>)</a>
     |
+    <a href="https://cs.qhu.edu.cn/jqtz/41fea87f6ea94631837889f9a55f2a93.htm" target="_blank">NCSC</a>
+    |
+    <a href="http://parnec.nuaa.edu.cn/mla21/#/program" target="_blank">MLA (<a href="https://live.bilibili.com/23994142" target="_blank">bili</a>)</a>
+    |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
 <!-- add more venue paper -->
