--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -204,6 +204,8 @@
     |
     <a href="#" target="_blank">NLPCC</a>
     |
+    <a href="#" target="_blank">ICONIP</a>
+    |
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
     <a href="https://2022.eswc-conferences.org/call-for-papers-research-track/" target="_blank">ESWC</a>
