--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -167,6 +167,8 @@
     |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
+    <a href="https://www.icmr2022.org/" target="_blank">ICMR</a>
+    |
     <a href="https://www.wsdm-conference.org/2022/" target="_blank">WSDM</a>
     |
 <!-- software engineering -->
