--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -369,6 +369,8 @@
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-87571-8" target="_blank">WISA</a>
     |
+    <a href="https://language-semantic.org/ijckg2021/" target="_blank">IJCKG</a>
+    |
     <a href="https://conf.ccf.org.cn/web/html7/index.html?globalId=m8359255541705646081619341782860&type=1" target="_blank">CBC (<a href="https://mp.weixin.qq.com/s/-yCIZlsSgafmw9QtCdcEPA" target="_blank">Report</a>)</a>
     |
     <a href="https://cs.qhu.edu.cn/jqtz/41fea87f6ea94631837889f9a55f2a93.htm" target="_blank">NCSC</a>
