--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -228,7 +228,7 @@
     |
     <a href="https://icc2022.ieee-icc.org/" target="_blank">ICC</a>
     |
-    <a href="#" target="_blank">INLG</a>
+    <a href="https://inlgmeeting.github.io/calls.html" target="_blank">INLG</a>
     |
     <a href="#" target="_blank">CCL</a>
     |
