--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://www.ixigua.com/6903865090026504707/" target="_blank">什么是SCI、SSCI、EI、ISTP、CPCI、CSCD和核心期刊？</a> 
   |
-  <a href="https://mp.weixin.qq.com/s/yiVbSJXDOf8ZRCvbUClBOQ" target="_blank">《国际期刊预警名单（试行）》正式发布！生物医学占比过半</a> 
+  <a href="https://mp.weixin.qq.com/s/yiVbSJXDOf8ZRCvbUClBOQ" target="_blank">《国际期刊预警名单（试行）》正式发布！生物医学占比过半</a>
+  |
+  <a href="https://mp.weixin.qq.com/s/4Epm48lJXZnDvDoHw6uHBQ" target="_blank">【学术相关】刚刚，中科院最新预警期刊名单发布！</a>  
   <br />
   <br />
   
