--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1414,6 +1414,8 @@ NLP/KG field：
 Machine Learning field：
 <br />
     <a href="http://changxu.xyz/" target="_blank">Chang Xu</a>
+    |
+    <a href="http://www.fanny-yang.de/" target="_blank">Fanny Yang</a>
     |       
   <br />
   <br />
