--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -308,7 +308,9 @@
     <a href="https://iswc2021.semanticweb.org/under-construction" target="_blank">ISWC</a> (<a href="https://iswc2021.semanticweb.org/accepted-papers" target="_blank">Accepted papers</a>)
     |
     <a href="https://kr2021.kbsg.rwth-aachen.de/page/accepted_papers" target="_blank">KR</a>
-    |  
+    |
+    <a href="http://om2021.ontologymatching.org/#cfp" target="_blank">OM</a>
+    |    
     <a href="https://2021.ecmlpkdd.org/?page_id=1811" target="_blank">ECML-PKDD</a>
     |
     <a href="https://www.cikm2021.org/accepted-papers" target="_blank">CIKM</a>
@@ -504,7 +506,9 @@
     ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
     |
     <a href="https://kr2020.inf.unibz.it/" target="_blank">KR</a> (<a href="https://proceedings.kr.org/2020/" target="_blank">Download</a>)
-    | 
+    |
+    <a href="http://om2020.ontologymatching.org/" target="_blank">OM</a>
+    |  
     <a href="https://2020.emnlp.org/papers/main" target="_blank">EMNLP</a>
     |
     <a href="https://ecmlpkdd2020.net/programme/accepted/" target="_blank">ECML-PKDD</a>
@@ -644,6 +648,8 @@
     |
     <a href="https://iswc2019.semanticweb.org/proceedings/" target="_blank">ISWC</a>
     |
+    <a href="http://om2019.ontologymatching.org/" target="_blank">OM</a>
+    |  
     <a href="https://link.springer.com/book/10.1007/978-3-030-21348-0" target="_blank">ESWC</a>
     |
     <a href="https://ecmlpkdd2019.org/programme/accepted/" target="_blank">ECML-PKDD</a>
