--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1028,6 +1028,21 @@
 <br />
 <br />
 
+
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">AI监管</h3>
+
+<br />
+    <a href="https://mp.weixin.qq.com/s/SDLfiTsbATEq49Dlp9q5iA" target="_blank">2022年第一波AI重磅监管：官方发布“算法推荐管理规定”</a>
+<br />
+<br />
+
+
 <hr class="style17">
 
 <h3 style="
