--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1038,7 +1038,7 @@
     border-left: 5px solid #0084f2;">AI监管</h3>
 
 <br />
-    <a href="https://mp.weixin.qq.com/s/SDLfiTsbATEq49Dlp9q5iA" target="_blank">2022年第一波AI重磅监管：官方发布“算法推荐管理规定”</a>
+    <a href="https://mp.weixin.qq.com/s/SDLfiTsbATEq49Dlp9q5iA" target="_blank">2022年第一波AI重磅监管：官方发布“算法推荐管理规定”</a> | <a href="http://www.cac.gov.cn/2021-08/27/c_1631652502874117.htm" target="_blank">国家互联网信息办公室关于《互联网信息服务算法推荐管理规定（征求意见稿）》公开征求意见的通知</a> 
 <br />
 <br />
 
