--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -234,6 +234,8 @@
     |
     <a href="#" target="_blank">CCL</a>
     |
+    <a href="http://chinamm.csig.org.cn/2022/paper.html" target="_blank">ChinaMM</a>
+    |
     <a href="https://www.chilconference.org/index.html" target="_blank">CHIL</a>
     |
     <a href="http://iccrd.org/" target="_blank">ICCRD</a>
