--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -212,7 +212,7 @@
     |
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
-    <a href="https://2022.eswc-conferences.org/call-for-papers-research-track/" target="_blank">ESWC</a>
+    <a href="https://2022.eswc-conferences.org/call-for-papers-research-track/" target="_blank">ESWC</a> (<a href="https://i3mainz.github.io/GeoLD2022/" target="_blank">GeoLD2022</a>)
     |
     <a href="https://www.icwsm.org/2022/index.html/#fullpapers" target="_blank">ICWSM</a>
     |
@@ -349,7 +349,7 @@
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-82153-1?page=1#toc" target="_blank">KSEM</a>
     |
-    <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
+    <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a> (<a href="https://dice-group.github.io/GeoLD2021/" target="_blank">GeoLD2022</a>)
     |
     <a href="https://iconip2021.apnns.org/" target="_blank">ICONIP</a>
     |
