--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -507,7 +507,7 @@
     |
     <a href="https://conf.researchr.org/home/issta-2020" target="_blank">ISSTA</a>
     | 
-    ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
+    <a href="https://iswc2020.semanticweb.org/" target="_blank">ISWC</a> [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
     |
     <a href="https://kr2020.inf.unibz.it/" target="_blank">KR</a> (<a href="https://proceedings.kr.org/2020/" target="_blank">Download</a>)
     |
