--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -118,7 +118,7 @@
     <li><strong><font color="#874e26"><a href="https://www.cs.mcgill.ca/~wlh/grl_book/files/GRL_Book.pdf">Graph Representation Learning</a></font></strong></li>
 
     
-    <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-981-16-6054-2.pdf">Graph Representation Learning [<a href="https://mp.weixin.qq.com/s/DcI7R3zTHCtHwVbcLVWWcg" target="_blank">Report</a>]</a></font></strong></li>
+    <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-981-16-6054-2.pdf">Graph Neural Networks: Foundations, Frontiers, and Applications [<a href="https://mp.weixin.qq.com/s/DcI7R3zTHCtHwVbcLVWWcg" target="_blank">Report</a>]</a></font></strong></li>
 
 
     <li><strong><font color="#874e26"><a href="https://mitpress.mit.edu/books/introduction-lifted-probabilistic-inference">An Introduction to Lifted Probabilistic Inference</a></font></strong></li>
